--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,7 +5,8 @@ on:
     branches: [ main ]
     paths:
       - 'Dockerfile'
-      - 'keep_alive.py'
+      - 'monitor.py'
+      - 'app.py'
       - 'requirements.txt'
   workflow_dispatch:
 
